--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,49 +3,77 @@
 FaceBlog log in or sign up
 {% endblock %}
 {% block content %}
-<style>
-  .navbar {
-    display: none;
-  }
-</style>
-<div class="container login-container">
-  <div class="signup-card">
-      <div class="signup-form">
-        <h1 class="big-logo">Faceblog | Sign Up!</h1>
-        <form action="{% url 'signup' %}" method="POST">
-            {% csrf_token %}
-            <div class="form-row">
-                {{ form.first_name }}
-                {{ form.last_name }}
+<style> .navbar { display: none; } </style>
+<div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-sm-10 col-md-8 col-lg-6 w-75">
+                <div class="card shadow-lg border-0 rounded">
+                    <div class="card-body p-5">
+                        <h2 class="text-uppercase text-center mb-5">Create An Account</h2>
+                        <form action="{% url 'signup' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="form-outline mb-3">
+                                <div class="row">
+                                    <div class="col">
+                                        <label class="form-label" for=first-name>First Name</label>
+                                        <input type="text" id="first-name" name="first_name" 
+                                            class="form-control" />
+                                    </div>
+                                    <div class="col">
+                                        <label class="form-label" for="last-name">Last Name</label>
+                                        <input type="text" id="last-name" name="last_name" 
+                                            class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="email">Email</label>
+                                <input type="email" id="email" name="email" class="form-control" />
+                                {% for error in form.email.errors %}
+                                    <div>{{ error }}</div>
+                                {% endfor %}
+                            </div>
+
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="username">Username</label>
+                                <input type="text" id="username" name="username" class="form-control" />
+                                {% for error in form.username.errors %}
+                                    <div>{{ error }}</div>
+                                {% endfor %}
+                            </div>
+
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="password">Password</label>
+                                <input type="password" id="password" name="password1" class="form-control"/>
+                                  {% for error in form.password1.errors %}
+                                    <div>{{ error }}</div>
+                                  {% endfor %}
+                            </div>
+
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="password2">Confirm Password</label>
+                                <input type="password" id="password2" name="password2" class="form-control"/>
+                                  {% for error in form.password2.errors %}
+                                    <div>{{ error }}</div>
+                                  {% endfor %}
+                            </div>
+
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" 
+                                    class="col-12 btn btn-success btn-block btn-lg">Register</button>
+                            </div>
+
+                            <p class="text-center text-muted mt-4 mb-0">Have already an account? 
+                                <a href="{% url 'login' %}"
+                                class="fw-bold text-body no-underline">Login here</a></p>
+                            
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-row">
-                {{ form.email }}
-                {{ form.username }}
-            </div>
-            <div class="error-message-row">
-            {% for error in form.email.errors %}
-                <div>{{ error }}</div>
-            {% endfor %}
-            {% for error in form.username.errors %}
-                <div>{{ error }}</div>
-            {% endfor %}
-            </div>
-            <div class="form-row">
-                {{ form.password1 }}
-                {{ form.password2 }}
-            </div>
-            <div class="error-message-row">
-              {% for error in form.password1.errors %}
-                <div>{{ error }}</div>
-              {% endfor %}
-              {% for error in form.password2.errors %}
-                <div>{{ error }}</div>
-              {% endfor %}
-            </div>
-            <input class="btn btn-success form-control form-control-margin" type="submit" value="Sign Up">
-            <p>Already have an account? Log in <a href="{% url 'login' %}">Here</a></p>
-        </form>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
