--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -29,35 +29,41 @@ FaceBlog log in or sign up
                             </div>
                             
                             <div class="form-outline mb-3">
-                                <label class="form-label" for="email">Email</label>
-                                <input type="email" id="email" name="email" class="form-control" />
-                                {% for error in form.email.errors %}
-                                    <div>{{ error }}</div>
-                                {% endfor %}
+                                <div class="row">
+                                    <div class="col">
+                                        <label class="form-label" for="email">Email</label>
+                                        <input type="email" id="email" name="email" class="form-control" />
+                                        {% for error in form.email.errors %}
+                                            <div><strong>{{ error }}</strong></div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="col">
+                                        <label class="form-label" for="username">Username</label>
+                                        <input type="text" id="username" name="username" class="form-control" />
+                                        {% for error in form.username.errors %}
+                                            <div><strong>{{ error }}</strong></div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="form-outline mb-3">
-                                <label class="form-label" for="username">Username</label>
-                                <input type="text" id="username" name="username" class="form-control" />
-                                {% for error in form.username.errors %}
-                                    <div>{{ error }}</div>
-                                {% endfor %}
-                            </div>
-
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="password">Password</label>
-                                <input type="password" id="password" name="password1" class="form-control"/>
-                                  {% for error in form.password1.errors %}
-                                    <div>{{ error }}</div>
-                                  {% endfor %}
-                            </div>
-
-                            <div class="form-outline mb-3">
-                                <label class="form-label" for="password2">Confirm Password</label>
-                                <input type="password" id="password2" name="password2" class="form-control"/>
-                                  {% for error in form.password2.errors %}
-                                    <div>{{ error }}</div>
-                                  {% endfor %}
+                                <div class="row">
+                                    <div class="col">
+                                        <label class="form-label" for="password1">Password</label>
+                                        <input type="password" id="password1" name="password1" class="form-control"/>
+                                        {% for error in form.password1.errors %}
+                                            <div><strong>{{ error }}</strong></div>
+                                        {% endfor %}
+                                    </div>
+                                    <div class="col">
+                                        <label class="form-label" for="password2">Confirm Password</label>
+                                        <input type="password" id="password2" name="password2" class="form-control"/>
+                                        {% for error in form.password2.errors %}
+                                            <div><strong>{{ error }}</strong></div>
+                                        {% endfor %}
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="d-flex justify-content-center">
