--- a/blog/templates/blog/external_user_profile.html
+++ b/blog/templates/blog/external_user_profile.html
@@ -10,7 +10,7 @@
 <h2><strong>{{external_user.username}}</strong></h2>
 <a href="{% url 'profile-followers' external_user.username %}">Followers</a>: {{followers.count}}<br>
 <a href="{% url 'profile-following' external_user.username %}">Following</a>: {{following.count}}<br>
-Posts: {{posts.count}}</p>
+<p>Posts: {{posts.count}}</p>
 {% if request.user.is_authenticated%}
 <form action="{% url 'follow-unfollow' profile.id %}" method="POST">
   {% csrf_token %}
