--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -7,10 +7,39 @@
     {% load static %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/styles.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/styles.css' %}">
   </head>
   <body>
+    <div class="modal fade" 
+      id="errorModal" 
+      tabindex="-1" 
+      aria-labelledby="errorModalLabel" 
+      aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="errorModalLabel">Error</h5>
+            <button type="button" 
+              class="btn-close" 
+              data-bs-dismiss="modal" 
+              aria-label="Close">
+            </button>
+          </div>
+          <div class="modal-body">
+            {% for message in messages %}
+              <div class="alert alert-danger">
+                <strong>{{ message }}</strong>
+              </div>
+            {% endfor %}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container d-flex justify-content-between align-items-center">
@@ -18,12 +47,7 @@
             <a class="navbar-brand" href="{% url 'home' %}">FaceBlog</a>
             <form class="w-75" action="{% url 'search' %}" method="POST">
               {% csrf_token %}
-                <input type="hidden" name="redirect_url" value="{{ request.path }}">
-              {% for message in messages %}
-                <div class="message {{ message.tag }}">
-                  <strong>{{ message }}</strong>
-                </div>
-              {% endfor %}
+              <input type="hidden" name="redirect_url" value="{{ request.path }}">
               <div class="input-group">
                 <input class="form-control"
                   type="text"
@@ -50,45 +74,58 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto d-flex align-items-center">
               {% if request.user.is_authenticated %}
-              <li class="nav-item d-flex align-items-center">
-                {% if user.profile.profile_picture %}
-                  <img src="{{ user.profile.profile_picture.url }}" 
-                    alt="{{ user.username }} Profile Picture" 
-                    width="30" height="30">
-                {% else %}
-                  <img src="{% static 'blog/default.jpg' %}" 
-                    alt="{{ user.username }}" 
-                    width="30px" height="30px">
-                {% endif %}
-                <a class="btn" href="{% url 'dashboard' %}">{{ user.username }}</a>
-                </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a class="btn" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
-                      <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0-2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901"/>
-                    </svg>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" 
+                    href="{% url 'dashboard' %}">
+                    {% if user.profile.profile_picture %}
+                      <img src="{{ user.profile.profile_picture.url }}"
+                        class="rounded img-fluid"
+                        alt="{{ user.username }} Profile Picture" 
+                        width="26" height="26">
+                    {% else %}
+                      <img src="{% static 'blog/default.jpg' %}"
+                        class="rounded-circle img-fluid"
+                        alt="{{ user.username }}" 
+                        width="26px" height="26px">
+                    {% endif %}
+                    <span class="ms-1">{{ user.username }}</span>
                   </a>
                 </li>
-                <li class="nav-item d-flex align-items-center">
-                  <a class="btn" href="{% url 'post-create' %}">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                      <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z"/>
-                    </svg>
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="#">
+                    <i class="bi bi-bell text-success" style="font-size:20px;"></i>
+                    <span class="ms-1">Notifications</span>
                   </a>
                 </li>
-                <li class="nav-item d-flex align-items-center">
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center" href="{% url 'post-create' %}">
+                    <i class="bi bi-plus-circle text-success" style="font-size:20px;"></i>
+                    <span class="ms-1">New Post</span>
+                  </a>
+                </li>
+                <li class="nav-item">
                   <form class="nav-form" action="{% url 'logout' %}" method="POST">
                     {% csrf_token %}
-                    <button class="btn border-0 bg-transparent" type="submit">Log Out</button>
+                    <button 
+                      class="nav-link border-0 bg-transparent d-flex align-items-center" 
+                      type="submit">
+                      <i class="bi bi-box-arrow-right text-danger" style="font-size:20px;"></i>
+                      <span class="ms-1">Log Out</span>
+                    </button>
                   </form>
                 </li>
               {% else %}
                 <li class="nav-item d-flex align-items-center">
                   <form class="nav-form" action="{% url 'new_login' %}" method="POST">
                     {% csrf_token %}
-                    <button class="btn" type="submit">Log In</button>
+                    <button 
+                      class="nav-link border-0 bg-transparent d-flex align-items-center" 
+                      type="submit">
+                      <i class="bi bi-box-arrow-left text-danger" style="font-size:20px;"></i>
+                      <span class="ms-1">Log In</span>
+                    </button>
                   </form>
                 </li>
               {% endif %}
@@ -98,7 +135,19 @@
       </nav>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
     {% block content %}
     {% endblock %}
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+          var modalShown = false;
+          var hasMessages = "{{ messages|length|yesno:'true,false' }}";
+
+          if (hasMessages === "true" && !modalShown) {
+              var myModal = new bootstrap.Modal(document.getElementById('errorModal'));
+              myModal.show();
+              modalShown = true;
+          }
+      });
+    </script>
+  </body>
 </html>
