--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -73,7 +73,7 @@ FaceBlog log in or sign up
 
                             <p class="text-center text-muted mt-4 mb-0">Have already an account? 
                                 <a href="{% url 'login' %}"
-                                class="fw-bold text-body no-underline">Login here</a></p>
+                                class="fw-bold text-body">Login here</a></p>
                             
                         </form>
                     </div>
