--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -93,11 +93,18 @@
                     <span class="ms-1">{{ user.username }}</span>
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center" href="#">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle d-flex align-items-center" 
+                    href="#" role="button" data-bs-toggle="dropdown" 
+                    aria-expanded="false">
                     <i class="bi bi-bell text-success" style="font-size:20px;"></i>
                     <span class="ms-1">Notifications</span>
                   </a>
+                  <ul class="dropdown-menu">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center" href="{% url 'post-create' %}">
