--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -73,7 +73,7 @@
                     {% else %}
                     <div class="alert alert-warning">
                         The password reset link was invalid, possibly because it has already been used.
-                        Please request a new password reset.
+                        Please request a new password reset link. <a href="{% url 'login' %}">Go Back</a>
                     </div>
                     {% endif %}
                 </div>
