Commit 7.9: Improving Img Handling

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -30,7 +30,7 @@
 
     {% if post.img %}
       <div class="card-body p-0 mb-3 rounded-3 overflow-hidden">
-        <img src="{{post.img.url}}" alt="{{post.title}}" class="float-right w-100">
+        <img src="{{post.img.url}}" alt="{{post.title}}" class="float-right w-100" style="max-height:700px;">
       </div>
     {% endif %}
     
